--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             </div>
             <div class="content">
-                <h2>I AM <span>KAIYOUM</span></h2>
+                <h2>MY NAME IS  <span>KAIYOUM</span></h2>
                 <h1> I AM A <span>DEVELOPER</span> </h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, facilis voluptatibus. Harum
                     recusandae, vitae repellat itaque quo voluptatum rerum distinctio.</p>
